# GraduateWork

./: .gitignore  CMakeLists.txt  Client.cfg  Properties.cmake  Server.cfg
src/: Byte.hpp  CLI.hpp  Client.cpp  FileMultiplier.hpp  Log.hpp  MaskMultiply.hpp  Server.cpp  TestMask.hpp  main.cpp  pch.h
src/Compression alternatives/: Bit_RLE.hpp  Byte_RLE.hpp
src/cli/: CLI.hpp
src/logger/: Logger.hpp
src/net/: Client.hpp  Connection.hpp  Message.hpp  Server.hpp  ts_deque.hpp
src/version controller/: PathResolver.hpp  Resolver.hpp  VersionController.hpp
test data/test 1/: first.hpp  out.hpp  second.hpp
test data/test 2/: first.hpp  out.hpp
